fixed 1px gap at bottom of page

--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@ h2 {
 }
 
 .runner-container {
-	transform: translateY(-3px);
+	transform: translateY(-4px);
 	margin: 0;
 	padding: 0;
 	height: 39px;
@@ -349,7 +349,7 @@ h2 {
 .runner {
 	height: 39px;
 	width: 42px;
-	transform: translateY(3px);
+	transform: translateY(4px);
 	object-fit: cover;
 	margin: 0 auto;
 }
